# httprs

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
httprs/: Cargo.toml
httprs-bin/: Cargo.toml
httprs-bin/src/: main.rs
httprs/src/: lib.rs
httprs/src/http/: header.rs  http.rs  mod.rs  multipart.rs  request.rs  response.rs  value.rs
httprs/src/server/: mod.rs  tcp.rs  worker.rs
httprs/src/util/: date.rs
httprs/src/worker/: group.rs  helper.rs  manager.rs  mod.rs
src/: main.rs
src/http/: http.rs  response.rs
