[package]
name = "httprs"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = "1.3.0"
env_logger = "0.11.8"
flate2 = { version = "1.1.5", features = ["rust_backend"] }
log = "0.4.27"
nix = { version = "0.30.1", features = ["process", "signal", "ucontext", "time", "event", "net"] }
rand = "0.9.2"
